<resources>
    <string name="app_name">Parley Pirate</string>
    <string name="action_settings">Settings</string>
    <string name="onCreateLog">onCreate called</string>
    <string name="onStartLog">onStart called</string>
    <string name="onResumeLog">onResume called</string>
    <string name="onPauseLog">onPause called</string>
    <string name="onStopLog">onStop called</string>
    <string name="onDestroyLog">onDestroy called</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="parley_pirate_content_description">"Ahoy! I'm the Parley Pirate!"</string>
    <string name="login_cancelled">"Login cancelled"</string>
    <string name="login_error">"Login failed with code %d"</string>
    <string name="login">"Set Sail!"</string>

    <string name="action_logout">Log out</string>
    <string name="logout_success">Logged out</string>
    <string name="snackbar">Snackbar</string>
    <string name="action_delete_account">Delete account</string>
    <string name="delete_account_confirmation">Are you sure you want to delete your account?</string>
    <string name="action_update_displayname">Update display name</string>
    <string name="change">Confirm change</string>
    <string name="action_create_meeting">Create new Parley</string>

    <string name="starttime_label">Start Time</string>
    <string name="endtime_label">End Time</string>
    <string name="members_label">Members</string>
    <string name="availabilities_label">Availabilities</string>
    <string name="location_label">Location</string>
    <string name="button_create_meeting">Create Parley!</string>
    <string name="string_new_meeting">Create a parley!</string>
    <string name="login_successful">Welcome aboard, %1$s!</string>
    <string name="startdate_label">Start Date</string>
    <string name="enddate_label">End Date</string>
    <string name="select_startdate_label">Select Start Date</string>
    <string name="select_enddate_label">Select End Date</string>
    <string name="end_date">endDate</string>
    <string name="start_date">startDate</string>
    <string name="error_invalid_time_message">End time must be after start time</string>
    <string name="error_invalid_time_title">Invalid times</string>

    <string name="string_enter_availability">Enter availability</string>
    <string name="string_save_availability">Save availability</string>

    <string name="string_0_00">0:00</string>
    <string name="string_0_15">0:15</string>
    <string name="string_0_30">0:30</string>
    <string name="string_0_45">0:45</string>
    <string name="string_1_00">1:00</string>
    <string name="string_1_15">1:15</string>
    <string name="string_1_30">1:30</string>
    <string name="string_1_45">1:45</string>
    <string name="string_2_00">2:00</string>
    <string name="string_2_15">2:15</string>
    <string name="string_2_30">2:30</string>
    <string name="string_2_45">2:45</string>
    <string name="string_3_00">3:00</string>
    <string name="string_3_15">3:15</string>
    <string name="string_3_30">3:30</string>
    <string name="string_3_45">3:45</string>
    <string name="string_4_00">4:00</string>
    <string name="string_4_15">4:15</string>
    <string name="string_4_30">4:30</string>
    <string name="string_4_45">4:45</string>
    <string name="string_5_00">5:00</string>
    <string name="string_5_15">5:15</string>
    <string name="string_5_30">5:30</string>
    <string name="string_5_45">5:45</string>
    <string name="string_6_00">6:00</string>
    <string name="string_6_15">6:15</string>
    <string name="string_6_30">6:30</string>
    <string name="string_6_45">6:45</string>
    <string name="string_7_00">7:00</string>
    <string name="string_7_15">7:15</string>
    <string name="string_7_30">7:30</string>
    <string name="string_7_45">7:45</string>
    <string name="string_8_00">8:00</string>
    <string name="string_8_15">8:15</string>
    <string name="string_8_30">8:30</string>
    <string name="string_8_45">8:45</string>
    <string name="string_9_00">9:00</string>
    <string name="string_9_15">9:15</string>
    <string name="string_9_30">9:30</string>
    <string name="string_9_45">9:45</string>
    <string name="string_10_00">10:00</string>
    <string name="string_10_15">10:15</string>
    <string name="string_10_30">10:30</string>
    <string name="string_10_45">10:45</string>
    <string name="string_11_00">11:00</string>
    <string name="string_11_15">11:15</string>
    <string name="string_11_30">11:30</string>
    <string name="string_11_45">11:45</string>
    <string name="string_12_00">12:00</string>
    <string name="string_12_15">12:15</string>
    <string name="string_12_30">12:30</string>
    <string name="string_12_45">12:45</string>
    <string name="string_13_00">13:00</string>
    <string name="string_13_15">13:15</string>
    <string name="string_13_30">13:30</string>
    <string name="string_13_45">13:45</string>
    <string name="string_14_00">14:00</string>
    <string name="string_14_15">14:15</string>
    <string name="string_14_30">14:30</string>
    <string name="string_14_45">14:45</string>
    <string name="string_15_00">15:00</string>
    <string name="string_15_15">15:15</string>
    <string name="string_15_30">15:30</string>
    <string name="string_15_45">15:45</string>
    <string name="string_16_00">16:00</string>
    <string name="string_16_15">16:15</string>
    <string name="string_16_30">16:30</string>
    <string name="string_16_45">16:45</string>
    <string name="string_17_00">17:00</string>
    <string name="string_17_15">17:15</string>
    <string name="string_17_30">17:30</string>
    <string name="string_19_15">19:15</string>
    <string name="string_19_30">19:30</string>
    <string name="string_19_45">19:45</string>
    <string name="string_20_00">20:00</string>
    <string name="string_20_15">20:15</string>
    <string name="string_20_30">20:30</string>
    <string name="string_20_45">20:45</string>
    <string name="string_21_00">21:00</string>
    <string name="string_21_15">21:15</string>
    <string name="string_21_30">21:30</string>
    <string name="string_21_45">21:45</string>
    <string name="string_22_00">22:00</string>
    <string name="string_22_15">22:15</string>
    <string name="string_22_30">22:30</string>
    <string name="string_22_45">22:45</string>
    <string name="string_23_00">23:00</string>
    <string name="string_23_15">23:15</string>
    <string name="string_23_30">23:30</string>
    <string name="string_23_45">23:45</string>

    <string name="button_set_location_and_create_meeting">Set location and create parley!</string>
    <string name="button_select_location">Select location</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZGllc2VsZCIsImEiOiJjam55NTZhc2ExODN2M3Byd2ZzeTIyNzMzIn0.yi3DMDdq6yRq416WWW_lgw</string>
    <string name="title_meeting_location">Parley Location</string>
    <string name="x_marks_the_spot">X marks the spot!</string>
    <string name="error_getting_intent_extras">Error getting date from previous activity. Returning to menu.</string>
    <string name="error_importing_time">Error importing time</string>
    <string name="snackbar_failed_to_create">Failed to create parley, shiver me timbers! Please try again later.</string>
    <string name="button_select_dates">Select dates</string>
    <string name="title_label">Parley Title</string>
    <string name="string_17_45">17:45</string>
    <string name="string_18_00">18:00</string>
    <string name="string_18_15">18:15</string>
    <string name="string_18_30">18:30</string>
    <string name="string_18_45">18:45</string>
    <string name="string_19_00">19:00</string>
    <string name="string_19_15">19:15</string>
    <string name="string_19_30">19:30</string>
    <string name="string_19_45">19:45</string>
    <string name="string_20_00">20:00</string>
    <string name="string_20_15">20:15</string>
    <string name="string_20_30">20:30</string>
    <string name="string_20_45">20:45</string>
    <string name="string_21_00">21:00</string>
    <string name="string_21_15">21:15</string>
    <string name="string_21_30">21:30</string>
    <string name="string_21_45">21:45</string>
    <string name="string_22_00">22:00</string>
    <string name="string_22_15">22:15</string>
    <string name="string_22_30">22:30</string>
    <string name="string_22_45">22:45</string>
    <string name="string_23_00">23:00</string>
    <string name="string_23_15">23:15</string>
    <string name="string_23_30">23:30</string>
    <string name="string_23_45">23:45</string>

    <string name="button_set_location_and_create_meeting">Set location and create parley!</string>
    <string name="button_select_location">Select location</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZGllc2VsZCIsImEiOiJjam55NTZhc2ExODN2M3Byd2ZzeTIyNzMzIn0.yi3DMDdq6yRq416WWW_lgw</string>
    <string name="title_meeting_location">Parley Location</string>
    <string name="x_marks_the_spot">X marks the spot!</string>
    <string name="error_getting_intent_extras">Error getting date from previous activity. Returning to menu.</string>
    <string name="error_importing_time">Error importing time</string>
    <string name="snackbar_failed_to_create">Failed to create parley, shiver me timbers! Please try again later.</string>
    <string name="button_select_dates">Select dates</string>
    <string name="title_label">Parley Title</string>
    <string name="title">title</string>
    <string name="error_empty_title_message">Please enter a title</string>
    <string name="error_empty_title_title">Invalid title</string>
    <string name="string_view_meetings">View Parleys!</string>
    <string name="users_placeholder"><![CDATA[<Users go here>]]></string>
    <string name="invite_users_label">Enter user\'s email address</string>
    <string name="invite_user_button">Invite User</string>
    <string name="current_members">Current members:</string>
    <string name="error_empty_invite_email">Please enter a valid email address</string>
    <string name="error_empty_invite_email_title">Invalid email</string>
    <string name="success_invite_member">Successfully added member %1s!</string>
    <string name="success_invite_member_title">Added member</string>
    <string name="failure_invite_member">Failed to invite member</string>
    <string name="failure_invite_member_title">Avast!</string>
    <string name="failure_find_member">User not found</string>
    <string name="avast">Avast!</string>
    <string name="failure_already_in_meeting">User is already invited to meeting</string>
</resources>
