<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/string_starttime"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/string_starttime_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/starttime_label"
        app:layout_constraintBottom_toTopOf="@+id/time_starttime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/string_endtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endtime_label"
        app:layout_constraintBottom_toTopOf="@+id/time_endtime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_starttime" />

    <Spinner
        android:id="@+id/time_starttime"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/string_endtime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/string_starttime_label"
        tools:text="@tools:sample/date/hhmm" />

    <Spinner
        android:id="@+id/time_endtime"
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/button_select_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/string_endtime"
        tools:text="@tools:sample/date/hhmm" />

    <Button
        android:id="@+id/button_select_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_select_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_endtime" />

</android.support.constraint.ConstraintLayout>